--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   cupertino_will_pop_scope: ^1.2.1
   decorated_icon: ^1.2.1
   double_back_to_close_app: ^2.1.0
+  flutter_staggered_grid_view: ^0.7.0
 
 dev_dependencies:
   flutter_test:
