--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,8 @@ dependencies:
   decorated_icon: ^1.2.1
   double_back_to_close_app: ^2.1.0
   flutter_staggered_grid_view: ^0.7.0
+  image_picker: ^1.1.1
+  gender_picker: ^1.1.0
 
 dev_dependencies:
   flutter_test:
