--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,8 @@ dependencies:
   flutter_staggered_grid_view: ^0.7.0
   image_picker: ^1.1.1
   gender_picker: ^1.1.0
+  pie_chart: ^5.4.0
+  fl_chart: ^0.68.0
 
 dev_dependencies:
   flutter_test:
