--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   flutter_staggered_grid_view: ^0.7.0
   image_picker: ^1.1.1
   gender_picker: ^1.1.0
+  crop_your_image: ^1.0.2
 
 dev_dependencies:
   flutter_test:
