--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   gender_picker: ^1.1.0
   pie_chart: ^5.4.0
   fl_chart: ^0.68.0
+  crop_your_image: ^1.0.2
 
 dev_dependencies:
   flutter_test:
