--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   pie_chart: ^5.4.0
   fl_chart: ^0.68.0
   crop_your_image: ^1.0.2
+  get_storage: ^2.1.1
 
 dev_dependencies:
   flutter_test:
