--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,7 @@ dependencies:
   get_storage: ^2.1.1
   logger: ^2.3.0
   chat_bubbles: ^1.6.0
+  socket_io_client: ^1.0.2
 
 dev_dependencies:
   flutter_test:
