--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,6 @@ dependencies:
   http: ^1.2.1
   flutter_native_splash: ^2.4.0
   flutter_launcher_icons: ^0.13.1
-  pod_player: ^0.2.2
   carousel_slider: ^4.2.1
   readmore: ^3.0.0
   intl: ^0.19.0
@@ -60,6 +59,9 @@ dependencies:
   logger: ^2.3.0
   chat_bubbles: ^1.6.0
   socket_io_client: ^1.0.2
+  video_player: ^2.8.6
+  visibility_detector: ^0.4.0+2
+  flick_video_player: ^0.8.0
 
 dev_dependencies:
   flutter_test:
