--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,7 @@ dependencies:
   video_player: ^2.8.6
   visibility_detector: ^0.4.0+2
   flick_video_player: ^0.8.0
+  sqflite: ^2.3.3+1
 
 dev_dependencies:
   flutter_test:
