--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,7 @@ dependencies:
   visibility_detector: ^0.4.0+2
   flick_video_player: ^0.8.0
   sqflite: ^2.3.3+1
+  url_launcher: ^6.2.6
 
 dev_dependencies:
   flutter_test:
