--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -58,5 +58,18 @@
   		<key>NSAllowsArbitraryLoads</key>
   		<true/>
 		</dict>
+		<key>UIBackgroundModes</key>
+		<array>
+		<string>fetch</string>
+		<string>remote-notification</string>
+		</array>
+		<key>FirebaseAppDelegateProxyEnabled</key>
+		<false/>
+		<key>NSAppTransportSecurity</key>
+		<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+		</dict>
+
 	</dict>
 </plist>
