--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,8 @@ dependencies:
   sqflite: ^2.3.3+1
   url_launcher: ^6.2.6
   change_app_package_name: ^1.1.0
+  firebase_core: ^3.0.0
+  firebase_messaging: ^15.0.0
 
 dev_dependencies:
   flutter_test:
