--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,6 +69,7 @@ dependencies:
     firebase_messaging: ^15.0.0
     firebase_installations: ^16.3.6
     firebase_in_app_messaging: ^0.8.0
+    dashed_circular_progress_bar: ^0.0.6
 
 dev_dependencies:
     flutter_test:
