--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.1
+version: 1.0.2
 
 environment:
     sdk: ">=3.3.2 <4.0.0"
@@ -70,6 +70,7 @@ dependencies:
     firebase_installations: ^16.3.6
     firebase_in_app_messaging: ^0.8.0
     dashed_circular_progress_bar: ^0.0.6
+    calendar_date_picker2: ^1.0.6
 
 dev_dependencies:
     flutter_test:
