--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -71,6 +71,7 @@ dependencies:
     firebase_in_app_messaging: ^0.8.0
     dashed_circular_progress_bar: ^0.0.6
     calendar_date_picker2: ^1.0.6
+    google_fonts: ^6.2.1
 
 dev_dependencies:
     flutter_test:
