--- a/macos/Runner/Configs/AppInfo.xcconfig
+++ b/macos/Runner/Configs/AppInfo.xcconfig
@@ -8,7 +8,7 @@
 PRODUCT_NAME = SNP
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = com.alibtisamFlutter
+PRODUCT_BUNDLE_IDENTIFIER = com.sportsnetwork.portal
 
 // The copyright displayed in application information
 PRODUCT_COPYRIGHT = Copyright © 2024 com.. All rights reserved.
