--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -77,6 +77,7 @@ dependencies:
     video_thumbnail: ^0.5.3
     rename: ^3.0.2
     connectivity_watcher: ^2.0.0
+    pinput: ^5.0.0
 
 dev_dependencies:
     flutter_test:
