--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -76,7 +76,7 @@ if (flutterVersionName == null) {
            
             // TODO: Add your own signing config for the release build.
             // Signing with the debug keys for now, so `flutter run --release` works.
-            signingConfig signingConfigs.release
+            signingConfig signingConfigs.debug
         }
         
     }
@@ -89,6 +89,7 @@ flutter {
 dependencies {
      // Import the BoM for the Firebase platform
     implementation(platform("com.google.firebase:firebase-bom:33.1.0"))
+    implementation("com.google.firebase:firebase-auth")
 
     // Add the dependencies for the In-App Messaging and Analytics libraries
     // When using the BoM, you don't specify versions in Firebase library dependencies
