--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -80,6 +80,7 @@ dependencies:
     pinput: ^5.0.0
     app_version_update: ^5.0.1
     firebase_auth: ^5.1.2
+    country_code_picker: ^3.0.0
 
 dev_dependencies:
     flutter_test:
