--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.5+5
+version: 1.0.6+6
 
 environment:
     sdk: ">=3.3.2 <4.0.0"
@@ -81,6 +81,7 @@ dependencies:
     app_version_update: ^5.0.1
     firebase_auth: ^5.1.2
     country_code_picker: ^3.0.0
+    age_calculator: ^1.0.0
 
 dev_dependencies:
     flutter_test:
