--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -84,6 +84,7 @@ dependencies:
     webview_flutter: ^4.8.0
     devicelocale: ^0.7.1
     day_picker: ^2.2.0
+    simple_gradient_text: ^1.3.0
     
 dev_dependencies:
     flutter_test:
