--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -86,6 +86,7 @@ dependencies:
     day_picker: ^2.2.0
     simple_gradient_text: ^1.3.0
     awesome_snackbar_content: ^0.1.3
+    hexcolor: ^3.0.1
     
 dev_dependencies:
     flutter_test:
