--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,7 @@ dependencies:
     http: ^1.2.1
     flutter_native_splash: ^2.4.0
     flutter_launcher_icons: ^0.13.1
-    carousel_slider: ^4.2.1
+    #carousel_slider: ^4.2.1
     readmore: ^3.0.0
     intl: ^0.19.0
     lottie: ^3.1.1
@@ -87,6 +87,7 @@ dependencies:
     simple_gradient_text: ^1.3.0
     awesome_snackbar_content: ^0.1.3
     hexcolor: ^3.0.1
+    carousel_slider: ^5.0.0
     
 dev_dependencies:
     flutter_test:
