--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -81,12 +81,13 @@ dependencies:
 
     country_code_picker: ^3.0.0
     age_calculator: ^1.0.0
-    webview_flutter: ^4.8.0
     devicelocale: ^0.7.1
     day_picker: ^2.2.0
     simple_gradient_text: ^1.3.0
     awesome_snackbar_content: ^0.1.3
     hexcolor: ^3.0.1
+    youtube_player_flutter: ^8.1.2
+   
     
 dev_dependencies:
     flutter_test:
