--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -87,6 +87,7 @@ dependencies:
     awesome_snackbar_content: ^0.1.3
     hexcolor: ^3.0.1
     youtube_player_flutter: ^8.1.2
+    carousel_slider: ^5.0.0
    
     
 dev_dependencies:
