--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,10 +35,10 @@ dependencies:
     # Use with the CupertinoIcons class for iOS style icons.
     cupertino_icons: ^1.0.6
     get: ^4.6.6
-    get_it: ^7.7.0
+    get_it: ^8.0.0
     http: ^1.2.1
     flutter_native_splash: ^2.4.0
-    flutter_launcher_icons: ^0.13.1
+    flutter_launcher_icons: ^0.14.1
     #carousel_slider: ^4.2.1
     readmore: ^3.0.0
     intl: ^0.19.0
@@ -53,27 +53,27 @@ dependencies:
     image_picker: ^1.1.1
     gender_picker: ^1.1.0
     pie_chart: ^5.4.0
-    fl_chart: ^0.68.0
+    fl_chart: ^0.69.0
     crop_your_image: ^1.0.2
     get_storage: ^2.1.1
     logger: ^2.3.0
     chat_bubbles: ^1.6.0
-    socket_io_client: ^1.0.2
+    socket_io_client: ^2.0.3+1
     video_player: ^2.8.6
     visibility_detector: ^0.4.0+2
-    flick_video_player: ^0.8.0
+    flick_video_player: ^0.9.0
     sqflite: ^2.3.3+1
     url_launcher: ^6.2.6
     change_app_package_name: ^1.3.0
     firebase_core: ^3.0.0
-    firebase_messaging: ^15.0.0
+    firebase_messaging: ^15.1.3
     firebase_installations: ^16.3.6
     firebase_in_app_messaging: ^0.8.0
     dashed_circular_progress_bar: ^0.0.6
     calendar_date_picker2: ^1.0.6
     google_fonts: ^6.2.1
     fpdart: ^1.1.0
-    vibration: ^1.9.0
+    vibration: ^2.0.0
     video_thumbnail: ^0.5.3
     rename: ^3.0.2
     connectivity_watcher: ^2.0.0
@@ -81,13 +81,15 @@ dependencies:
 
     country_code_picker: ^3.0.0
     age_calculator: ^1.0.0
-    devicelocale: ^0.7.1
+    devicelocale: ^0.8.1
     day_picker: ^2.2.0
     simple_gradient_text: ^1.3.0
     awesome_snackbar_content: ^0.1.3
     hexcolor: ^3.0.1
     youtube_player_flutter: ^8.1.2
     carousel_slider: ^5.0.0
+    custom_will_pop_scope: ^2.1.1
+    overlay_support: ^2.1.0
    
     
 dev_dependencies:
@@ -99,7 +101,7 @@ dev_dependencies:
     # activated in the `analysis_options.yaml` file located at the root of your
     # package. See that file for information about deactivating specific lint
     # rules and activating additional ones.
-    flutter_lints: ^3.0.0
+    flutter_lints: ^5.0.0
 flutter_native_splash:
     color: "#FFFFFF"
     android_12:
