--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,7 +58,7 @@ dependencies:
     get_storage: ^2.1.1
     logger: ^2.3.0
     chat_bubbles: ^1.6.0
-    socket_io_client: ^2.0.3+1
+    socket_io_client: ^1.0.2
     video_player: ^2.8.6
     visibility_detector: ^0.4.0+2
     flick_video_player: ^0.9.0
@@ -90,6 +90,9 @@ dependencies:
     carousel_slider: ^5.0.0
     custom_will_pop_scope: ^2.1.1
     overlay_support: ^2.1.0
+    file_picker: ^8.1.2
+    flutter_chat_bubble: ^2.0.2
+    cached_network_image: ^3.4.1
    
     
 dev_dependencies:
