--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -93,6 +93,7 @@ dependencies:
     file_picker: ^8.1.2
     flutter_chat_bubble: ^2.0.2
     cached_network_image: ^3.4.1
+    permission_handler: ^11.3.1
    
     
 dev_dependencies:
