--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -94,6 +94,7 @@ dependencies:
     flutter_chat_bubble: ^2.0.2
     cached_network_image: ^3.4.1
     permission_handler: ^11.3.1
+    image_picker_widget: ^2.4.1
    
     
 dev_dependencies:
