--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -95,6 +95,7 @@ dependencies:
     cached_network_image: ^3.4.1
     permission_handler: ^11.3.1
     image_picker_widget: ^2.4.1
+    auto_animated: ^3.2.0
    
     
 dev_dependencies:
