--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,10 +16,10 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.8+8
+version: 1.0.9+9
 
 environment:
-    sdk: ">=3.3.2 <4.0.0"
+  sdk: ">=3.3.2 <4.0.0"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -28,132 +28,136 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-    flutter:
-        sdk: flutter
+  flutter:
+    sdk: flutter
 
-    # The following adds the Cupertino Icons font to your application.
-    # Use with the CupertinoIcons class for iOS style icons.
-    cupertino_icons: ^1.0.6
-    get: ^4.6.6
-    get_it: ^8.0.0
-    http: ^1.2.1
-    flutter_native_splash: ^2.4.0
-    flutter_launcher_icons: ^0.14.1
-    #carousel_slider: ^4.2.1
-    readmore: ^3.0.0
-    intl: ^0.19.0
-    lottie: ^3.1.1
-    floating_bottom_navigation_bar: ^1.5.2
-    blurry_modal_progress_hud: ^1.1.1
-    shared_preferences: ^2.2.3
-    cupertino_will_pop_scope: ^1.2.1
-    decorated_icon: ^1.2.1
-    double_back_to_close_app: ^2.1.0
-    flutter_staggered_grid_view: ^0.7.0
-    image_picker: ^1.1.1
-    gender_picker: ^1.1.0
-    pie_chart: ^5.4.0
-    fl_chart: ^0.69.0
-    crop_your_image: ^1.0.2
-    get_storage: ^2.1.1
-    logger: ^2.3.0
-    chat_bubbles: ^1.6.0
-    socket_io_client: ^1.0.2
-    video_player: ^2.8.6
-    visibility_detector: ^0.4.0+2
-    flick_video_player: ^0.9.0
-    sqflite: ^2.3.3+1
-    url_launcher: ^6.2.6
-    change_app_package_name: ^1.3.0
-    firebase_core: ^3.0.0
-    firebase_messaging: ^15.1.3
-    firebase_installations: ^16.3.6
-    firebase_in_app_messaging: ^0.8.0
-    dashed_circular_progress_bar: ^0.0.6
-    calendar_date_picker2: ^1.0.6
-    google_fonts: ^6.2.1
-    fpdart: ^1.1.0
-    vibration: ^2.0.0
-    video_thumbnail: ^0.5.3
-    rename: ^3.0.2
-    connectivity_watcher: ^2.0.0
-    pinput: ^5.0.0
+  # The following adds the Cupertino Icons font to your application.
+  # Use with the CupertinoIcons class for iOS style icons.
+  cupertino_icons: ^1.0.6
+  get: ^4.6.6
+  get_it: ^8.0.0
+  http: ^1.2.1
+  flutter_native_splash: ^2.4.0
+  flutter_launcher_icons: ^0.14.1
+  #carousel_slider: ^4.2.1
+  readmore: ^3.0.0
+  intl: ^0.19.0
+  lottie: ^3.1.1
+  floating_bottom_navigation_bar: ^1.5.2
+  blurry_modal_progress_hud: ^1.1.1
+  shared_preferences: ^2.2.3
+  cupertino_will_pop_scope: ^1.2.1
+  decorated_icon: ^1.2.1
+  double_back_to_close_app: ^2.1.0
+  flutter_staggered_grid_view: ^0.7.0
+  image_picker: ^1.1.1
+  gender_picker: ^1.1.0
+  pie_chart: ^5.4.0
+  fl_chart: ^0.69.0
+  crop_your_image: ^1.0.2
+  get_storage: ^2.1.1
+  logger: ^2.3.0
+  chat_bubbles: ^1.6.0
+  socket_io_client: ^1.0.2
+  video_player: ^2.8.6
+  visibility_detector: ^0.4.0+2
+  flick_video_player: ^0.9.0
+  sqflite: ^2.3.3+1
+  url_launcher: ^6.2.6
+  change_app_package_name: ^1.3.0
+  firebase_core: ^3.0.0
+  firebase_messaging: ^15.1.3
+  firebase_installations: ^16.3.6
+  firebase_in_app_messaging: ^0.8.0
+  dashed_circular_progress_bar: ^0.0.6
+  calendar_date_picker2: ^1.0.6
+  google_fonts: ^6.2.1
+  fpdart: ^1.1.0
+  vibration: ^2.0.0
+  video_thumbnail: ^0.5.3
+  rename: ^3.0.2
+  connectivity_watcher: ^2.0.0
+  pinput: ^5.0.0
 
-    country_code_picker: ^3.0.0
-    age_calculator: ^1.0.0
-    devicelocale: ^0.8.1
-    day_picker: ^2.2.0
-    simple_gradient_text: ^1.3.0
-    awesome_snackbar_content: ^0.1.3
-    hexcolor: ^3.0.1
-    youtube_player_flutter: ^8.1.2
-    carousel_slider: ^5.0.0
-    custom_will_pop_scope: ^2.1.1
-    overlay_support: ^2.1.0
-    file_picker: ^8.1.2
-    flutter_chat_bubble: ^2.0.2
-    cached_network_image: ^3.4.1
-    permission_handler: ^11.3.1
-    image_picker_widget: ^2.4.1
-    auto_animated: ^3.2.0
-   
-    
+  country_code_picker: ^3.0.0
+  age_calculator: ^1.0.0
+  devicelocale: ^0.8.1
+  day_picker: ^2.2.0
+  simple_gradient_text: ^1.3.0
+  awesome_snackbar_content: ^0.1.3
+  hexcolor: ^3.0.1
+  #   youtube_player_flutter: ^8.1.2
+  carousel_slider: ^5.0.0
+  custom_will_pop_scope: ^2.1.1
+  overlay_support: ^2.1.0
+  file_picker: ^8.1.2
+  flutter_chat_bubble: ^2.0.2
+  cached_network_image: ^3.4.1
+  permission_handler: ^11.3.1
+  image_picker_widget: ^2.4.1
+  auto_animated: ^3.2.0
+  pod_player: ^0.2.2
+  flutter_animate: ^4.5.0
+  omni_datetime_picker: ^2.0.5
+#   youtube_player_iframe: ^5.2.0
+#   flutter_inappwebview: ^6.1.5
+
 dev_dependencies:
-    flutter_test:
-        sdk: flutter
+  flutter_test:
+    sdk: flutter
 
-    # The "flutter_lints" package below contains a set of recommended lints to
-    # encourage good coding practices. The lint set provided by the package is
-    # activated in the `analysis_options.yaml` file located at the root of your
-    # package. See that file for information about deactivating specific lint
-    # rules and activating additional ones.
-    flutter_lints: ^5.0.0
+  # The "flutter_lints" package below contains a set of recommended lints to
+  # encourage good coding practices. The lint set provided by the package is
+  # activated in the `analysis_options.yaml` file located at the root of your
+  # package. See that file for information about deactivating specific lint
+  # rules and activating additional ones.
+  flutter_lints: ^5.0.0
 flutter_native_splash:
-    color: "#FFFFFF"
-    android_12:
-    image: "assets/images/launcher_icon.png"
+  color: "#FFFFFF"
+  android_12:
+  image: "assets/images/launcher_icon.png"
 flutter_launcher_icons:
-    android: "launcher_icon"
-    ios: true
-    image_path: "assets/images/launcher_icon.png"
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/images/launcher_icon.png"
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
 # The following section is specific to Flutter packages.
 flutter:
-    # The following line ensures that the Material Icons font is
-    # included with your application, so that you can use the icons in
-    # the material Icons class.
-    uses-material-design: true
+  # The following line ensures that the Material Icons font is
+  # included with your application, so that you can use the icons in
+  # the material Icons class.
+  uses-material-design: true
 
-    # To add assets to your application, add an assets section, like this:
-    assets:
-        - assets/images/
-        - assets/lottie/
-    #   - images/a_dot_ham.jpeg
+  # To add assets to your application, add an assets section, like this:
+  assets:
+    - assets/images/
+    - assets/lottie/
+  #   - images/a_dot_ham.jpeg
 
-    # An image asset can refer to one or more resolution-specific "variants", see
-    # https://flutter.dev/assets-and-images/#resolution-aware
+  # An image asset can refer to one or more resolution-specific "variants", see
+  # https://flutter.dev/assets-and-images/#resolution-aware
 
-    # For details regarding adding assets from package dependencies, see
-    # https://flutter.dev/assets-and-images/#from-packages
+  # For details regarding adding assets from package dependencies, see
+  # https://flutter.dev/assets-and-images/#from-packages
 
-    # To add custom fonts to your application, add a fonts section here,
-    # in this "flutter" section. Each entry in this list should have a
-    # "family" key with the font family name, and a "fonts" key with a
-    # list giving the asset and other descriptors for the font. For
-    # example:
-    # fonts:
-    #   - family: Schyler
-    #     fonts:
-    #       - asset: fonts/Schyler-Regular.ttf
-    #       - asset: fonts/Schyler-Italic.ttf
-    #         style: italic
-    #   - family: Trajan Pro
-    #     fonts:
-    #       - asset: fonts/TrajanPro.ttf
-    #       - asset: fonts/TrajanPro_Bold.ttf
-    #         weight: 700
-    #
-    # For details regarding fonts from package dependencies,
-    # see https://flutter.dev/custom-fonts/#from-packages
+  # To add custom fonts to your application, add a fonts section here,
+  # in this "flutter" section. Each entry in this list should have a
+  # "family" key with the font family name, and a "fonts" key with a
+  # list giving the asset and other descriptors for the font. For
+  # example:
+  # fonts:
+  #   - family: Schyler
+  #     fonts:
+  #       - asset: fonts/Schyler-Regular.ttf
+  #       - asset: fonts/Schyler-Italic.ttf
+  #         style: italic
+  #   - family: Trajan Pro
+  #     fonts:
+  #       - asset: fonts/TrajanPro.ttf
+  #       - asset: fonts/TrajanPro_Bold.ttf
+  #         weight: 700
+  #
+  # For details regarding fonts from package dependencies,
+  # see https://flutter.dev/custom-fonts/#from-packages
